[package]
name = "papier_lns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
rustc-hash = "1.1.0"
signal-hook = "0.3.10"
smallbitset = "0.5.1"
thiserror = "1.0.30"

[dev-dependencies]
# used for examples and tests only
anyhow = "1.0.44"
structopt = "0.3.25"
peak_alloc = "0.1.0"
libc = "0.2"

[profile.release]
lto   = "fat"
panic = "abort"
